--- a/webservice/templates/campaign_deps.html
+++ b/webservice/templates/campaign_deps.html
@@ -1,12 +1,12 @@
 {%extends "layout.html" %}
 
 {%block title%}
-POMS Campaign Dependencies
+POMS CampaignStage Dependencies
 {%endblock%}
 
 {%block header%}
 <h1 class="ui header">
-          Campaign Dependencies for Tag {{tag}}
+          CampaignStage Dependencies for Campaign {{tag}}
 
           <div class="sub header">
               see dependencies
