--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -1,12 +1,12 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS:Campaign {{name}}
+POMS:CampaignStage {{name}}
 {%endblock%}
 
 {%block header%}
 <h1 class="ui header">
-     Campaign {{name}} Submissions{%include 'help_button.html'%}
+     CampaignStage {{name}} Submissions{%include 'help_button.html'%}
 </h1>
 
 <div class="ui basic label">
