--- a/webservice/templates/launch_template_edit.html
+++ b/webservice/templates/launch_template_edit.html
@@ -54,7 +54,7 @@ Launch Templates {{ show_hint('', 'Help page') }}
           {% if data.authorized[loop.index-1]==True %}
           <i class="large edit link blue icon"  onclick="edit_template({{loop.index}});"></i>
           <i class="large copy link blue icon"  onclick="edit_template({{loop.index}},'CLONE');"></i>
-          <i class="large trash link blue icon" onclick="delete_template('{{row.LaunchTemplate.name}}'); "></i>
+          <i class="large trash link blue icon" onclick="delete_template('{{row.LoginSetup.name}}'); "></i>
           {% else %}
           <i class="disabled large edit link blue icon"></i>
           <i class="large copy link blue icon"  onclick="edit_template({{loop.index}},'CLONE');"></i>
@@ -63,11 +63,11 @@ Launch Templates {{ show_hint('', 'Help page') }}
           {% endif %}
         </td>
         <td id="ldf_authorized_{{loop.index}}" style="display:none">{{data.authorized[loop.index-1]}}</td>
-        <td id="ldf_launch_id_{{loop.index}}" style="display:none;">{{row.LaunchTemplate.launch_id}}</td>
-        <td id="ldf_name_{{loop.index}}">{{row.LaunchTemplate.name}}</td>
-        <td id="ldf_launch_host_{{loop.index}}">{{row.LaunchTemplate.launch_host}}</td>
-        <td id="ldf_launch_account_{{loop.index}}">{{row.LaunchTemplate.launch_account}}</td>
-        <td id="ldf_launch_setup_{{loop.index}}">{{row.LaunchTemplate.launch_setup|e}}</td>
+        <td id="ldf_launch_id_{{loop.index}}" style="display:none;">{{row.LoginSetup.login_setup_id}}</td>
+        <td id="ldf_name_{{loop.index}}">{{row.LoginSetup.name}}</td>
+        <td id="ldf_launch_host_{{loop.index}}">{{row.LoginSetup.launch_host}}</td>
+        <td id="ldf_launch_account_{{loop.index}}">{{row.LoginSetup.launch_account}}</td>
+        <td id="ldf_launch_setup_{{loop.index}}">{{row.LoginSetup.launch_setup|e}}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -123,7 +123,7 @@ Launch Templates {{ show_hint('', 'Help page') }}
   <form id="template_add_edit_form" class="ui form" method="POST" action="launch_template_edit">
     <div class="three fields">
       <div class="field">
-        <label>Name {{ show_hint('#Name', 'Campaign name') }}</label>
+        <label>Name {{ show_hint('#Name', 'CampaignStage name') }}</label>
         <input type="text" id="ae_launch_name" name="ae_launch_name" placeholder="Template Name">
       </div>
       <div class="field">
@@ -192,7 +192,7 @@ $("#experiment").change(function() {
   }
 
   function edit_template(index, clone) {
-    launch_id = $("#ldf_launch_id_"+index).text()
+    login_setup_id = $("#ldf_launch_id_"+index).text()
     name = $("#ldf_name_"+index).text()
     launch_host = $("#ldf_launch_host_"+index).text()
     launch_account = $("#ldf_launch_account_"+index).text()
@@ -205,7 +205,7 @@ $("#experiment").change(function() {
       $("#ae_launch_name").val("CLONE OF: " + name)
     }
     $("#template_header").text("Launch Template Editor ({{ data.curr_experiment if data.curr_experiment is defined}})");
-    $("#ae_launch_id").val(launch_id);
+    $("#ae_launch_id").val(login_setup_id);
     $("#ae_launch_host").val(launch_host);
     $("#ae_launch_account").val(launch_account);
     $("#ae_launch_setup").val(launch_setup);
