--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -51,7 +51,7 @@ POMS Job Triage
       <td>{{job_info.Job.node_name}}</td>
       <td>{{job_info.Job.cpu_type}}</td>
       <td>{{job_info.Job.jobsub_job_id}}</td>
-      <td>{{job_info.Job.task_id}}</td>
+      <td>{{job_info.Job.submission_id}}</td>
       <td>{{job_info.Job.user_exe_exit_code}}</td>
       <td>{{job_info.Job.updated}}</td>
     </tr>
@@ -65,12 +65,12 @@ Held because: {{job_info.Job.reason_held}}
 {% endif %}
 
 
-{% if job_info.Task.project is not none %}
+{% if job_info.Submission.project is not none %}
 <h4 class="ui horizontal divider header">
       <i class="linkify icon"></i>
       SAM Project
 </h4>
-<a target="_blank" href="http://samweb.fnal.gov:8480/station_monitor/{{job_info.Campaign.experiment}}/stations/{{job_info.Campaign.experiment}}/projects/{{job_info.Task.project}}">http://samweb.fnal.gov:8480/station_monitor/{{job_info.Campaign.experiment}}/stations/{{job_info.Campaign.experiment}}/projects/{{job_info.Task.project}}</a>
+<a target="_blank" href="http://samweb.fnal.gov:8480/station_monitor/{{job_info.CampaignStage.experiment}}/stations/{{job_info.CampaignStage.experiment}}/projects/{{job_info.Submission.project}}">http://samweb.fnal.gov:8480/station_monitor/{{job_info.CampaignStage.experiment}}/stations/{{job_info.CampaignStage.experiment}}/projects/{{job_info.Submission.project}}</a>
 {% endif %}
 
 
@@ -100,10 +100,10 @@ Held because: {{job_info.Job.reason_held}}
 <span style="display:inline-block; min-width: 6em; text-align: right">{{item[2]}}</span> &nbsp;
 {% if item|length > 5 and item[5].find(jobsub_job_id_digits) > -1 %}
 <mark>
-<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
+<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&submission_id={{job_info.Job.submission_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
 </mark>
 {% else %}
-<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
+<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&submission_id={{job_info.Job.submission_id}}&tmin={{tmin}}&file={{item[5]}}">{{item[5]}}</a>
 {% endif %}
 <br/>
 
@@ -135,38 +135,38 @@ Held because: {{job_info.Job.reason_held}}
       <tr>
         <td class="three wide">Experiment</td>
         <td>
-          <p>{{job_info.Campaign.experiment}}</p>
+          <p>{{job_info.CampaignStage.experiment}}</p>
         </td>
       </tr>
 
       <tr>
-        <td>Campaign Stage</td>
+        <td>CampaignStage Stage</td>
         <td>
-          <p>{{job_info.Campaign.name}}</p>
+          <p>{{job_info.CampaignStage.name}}</p>
         </td>
       </tr>
       <tr>
         <td>Command Executed</td>
         <td>
-          <pre>{{job_info.Task.command_executed}}</pre>
+          <pre>{{job_info.Submission.command_executed}}</pre>
         </td>
       </tr>
       <tr>
         <td>Job Type Name</td>
         <td>
-          <p>{{job_info.CampaignDefinition.name}}</p>
+          <p>{{job_info.JobType.name}}</p>
         </td>
       </tr>
       <tr>
         <td>Submission Status</td>
         <td>
-          <p>{{job_info.Task.status}}</p>
+          <p>{{job_info.Submission.status}}</p>
         </td>
       </tr>
       <tr>
         <td>VO Role</td>
         <td>
-          <p>{{job_info.Campaign.vo_role}}</p>
+          <p>{{job_info.CampaignStage.vo_role}}</p>
         </td>
       </tr>
     </tbody>
